--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A basic started boilerplate project for node",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "npx nodemon src/index.js"
   },
@@ -12,7 +13,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
-    "http-status-codes": "^2.2.0",
+    "http-status-codes": "^2.3.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "mysql2": "^3.2.4",
