--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "winston": "^3.8.2"
   }
 }
