--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "mysql2": "^3.2.4",
+    "nodemailer": "^6.9.13",
     "nodemon": "^2.0.22",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
