--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
@@ -20,6 +21,7 @@
     "mysql2": "^3.2.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^2.0.22",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "winston": "^3.8.2"
