--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
-    "mysql2": "^3.2.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "winston": "^3.8.2"
+    "passport-jwt": "^4.0.1"
   }
 }
